[package]
name = "simple-rlp"
version = "0.1.0"
description = "Simple Recursive Length Prefix serialization & deserialization library"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/simple-rlp"
license = "Apache 2.0"
edition = "2018"

[dependencies]
borsh = "0.9.1"
serde = { version = "1.0", features = ["derive"] }